--- a/public/style2/style2.css
+++ b/public/style2/style2.css
@@ -1,33 +1,39 @@
 hgroup > h2 {
-    display: none;
+    display: block;
+
   }
   body,
   html {
-    margin: 0;
-    padding: 0;
+    margin: 1em;
+    padding:2em;
     border: 0;
   }
   
   hgroup > h1 {
-    border-bottom: 0.005em solid;
     margin-top: 30px;
+    margin-left: 160px;
+    color: black;
+    border-bottom: 0.01em solid;
+    border-color: gray;
   }
+
   .content {
-    padding: 20px;
-    margin: 0 auto;
-    max-width: 960px;
+    margin: 0px;
+    padding: 0px;
+    max-width: 950px;
   }
-  /*****************************/
+
   hgroup {
     float: left;
-    margin: 0;
-  
+    margin: 0px;
+    color: gray;
     width: 100%;
+    
   }
   
   header figure {
     position: absolute;
-    right: 20px;
+    right: 30px;
   }
   
   header h2 {
@@ -35,26 +41,26 @@ hgroup > h2 {
   }
   
   header figure img {
-    transform: rotate(-13deg);
+    transform: rotate(-15deg);
     width: 200px;
     height: 200px;
   }
   
-  /*****************************/
   #about {
     max-width: 640px;
     color: gray;
-    margin-bottom: 100px;
+    margin-bottom: 120px;
+    font-style: italic;
   }
   #about > h3 {
     display: none;
   }
-  /*****************************/
+ 
   section {
     float: left;
     padding-left: 160px;
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
   
   h3 {
@@ -62,12 +68,12 @@ hgroup > h2 {
     top: 0;
     left: 0;
     width: 150px;
-    margin-right: 10px;
+    margin-right: 20px;
     font-style: italic;
     height: 100%;
     border-right: 1px solid black;
   }
-  /*****************************/
+
   .skills {
     padding-top: 15px;
   }
@@ -133,7 +139,7 @@ hgroup > h2 {
   .skills-secondary .skill {
     font-size: 0.7em;
   }
-  /*****************************/
+ 
   #contact h3 {
     display: none;
   }
@@ -191,9 +197,9 @@ hgroup > h2 {
   .contact-facebook {
     background-image: url("../images/facebook.png");
   }
-  /*****************************/
+  
   .experience-type {
-    color: aqua;
+    color: teal;
   }
   .experience-institution {
     display: none;
@@ -202,12 +208,22 @@ hgroup > h2 {
     margin-top: 30px;
     float: left;
   }
+ 
   
   .experience-date {
     float: right;
     color: gray;
   }
-  @media only screen and (max-width: 650px) {
+  
+  .experience-location {
+    color: gray;
+    margin-left: 660px;
+  }
+  @media only screen and (max-width: 620px) {
+    /* For mobile phones */
+    .menu, .main, .right{
+      width: 100%;
+    }
     header figure {
       display: none;
     }
@@ -215,7 +231,7 @@ hgroup > h2 {
       padding-left: 0;
     }
     h3 {
-      position: static;
+      position: relative;
       border-right: none;
       border-bottom: 1px solid black;
     }
